@@ -1,3 +1,7 @@
+* 2014-10-21 - thorben.betten@open-xchange.com
+
+ - Fix for bug 34947: Check for a possible unrecoverable socket error when attempting to load mail settings (esp. standard folders); signal an empty value instead of throwing an error
+
 * 2014-10-20 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 34928: Try to lookup existing stored session if http-auth.autologin is enabled
